Remove unnecessary complication from template

--- a/templates/etc/bosun/scollector.conf.j2
+++ b/templates/etc/bosun/scollector.conf.j2
@@ -15,8 +15,6 @@ DisableSelf = false
 {% endif %}
 
 {% if _scollector.extra_lines is defined %}
-{% if _scollector.extra_lines.hosts is defined and _scollector.extra_lines.hosts[inventory_hostname] is defined %}
-{{ _scollector.extra_lines.hosts[inventory_hostname] }}
-{% endif %}
+{{ _scollector.extra_lines }}
 {% endif %}
 
