Allow configuration of MaxQueueLen
Especially on smaller EC2 instances, the memory footprint of
the scollector can become problematic when Bosun does not accept
metrics temporarily. This allows overriding the number of metrics
scollector keeps in memory before dropping them in case there is
no server available.

--- a/templates/etc/bosun/scollector.conf.j2
+++ b/templates/etc/bosun/scollector.conf.j2
@@ -1,6 +1,9 @@
 Host = "{{ _scollector.server.protocol|default("https") }}://{% if _scollector.auth is defined %}{{ _scollector.auth.user }}:{{ _scollector.auth.password }}@{% endif %}{{ _scollector.server.ip }}:{{ _scollector.server.port }}"
 FullHost = false
 Hostname = "{{ ansible_hostname ~ "." ~ _scollector.domain }}"
+{% if _scollector.max_queue_len is defined %}
+MaxQueueLen = {{ _scollector.max_queue_len }}
+{% endif %}
 {% if _scollector.external_collectors is defined %}
 ColDir = "{{ _scollector.external_collectors.dir }}"
 {% endif %}
